--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList.html
@@ -49,6 +49,13 @@
                                                   {{i.get_status_display}}
                                                 </a>
                                             </li>
+                                            {% if i.has_attachment %}
+                                            <li class="list-inline-item mb-0">
+                                                <a href="#" data-toggle="tooltip" title="" data-original-title="Attachment">
+                                                    <i class="fa fa-paperclip"></i>
+                                                </a>
+                                            </li>
+                                            {% endif %}
                                             <li class="list-inline-item mb-0">
                                                 <i class="fa fa-circle text-{{i.get_purchase_status_color}}"></i>
                                             </li>
