--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -54,13 +54,13 @@
                             <select class="select2-example" multiple>
                                 <option>انتخاب</option>
                             {% for i in users %}
-                                <option value="{{i.id}}">{{i}}</option>
+                                <option value="{{i.id}}" >{{i}}</option>
                             {% endfor %}
                              
                               </select>
                         </a>
                         {% endif %}
-                        <a href="#" class="list-group-item d-flex align-items-center">
+                        <a  class="list-group-item d-flex align-items-center">
                             
                             <button class="btn btn-outline-dark btn-block .btn-block3" type="submit" data-url="#" >
                                 فیلتر                </button>
