--- a/tiny_mrp/mrp/templates/mrp/purchase/mainList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/mainList.html
@@ -1,13 +1,13 @@
 {% extends 'mrp/blank-page.html' %}
 {% load static %}
 {%block content %}
-<div class="row">
+<div class="row d-print-none">
     <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h2 class="font-weight-bold mb-2">3.605</h2>
+                        <h2 class="font-weight-bold mb-2">0</h2>
                         <div>خرید های 7 روز گذشته</div>
                     </div>
                     <div>
@@ -22,7 +22,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h2 class="font-weight-bold mb-2">3.137</h2>
+                        <h2 class="font-weight-bold mb-2">0</h2>
                         <div>میانگین قیمت سفارشات</div>
                     </div>
                     <div>
@@ -37,8 +37,8 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h2 class="font-weight-bold mb-2">8.765</h2>
-                        <div>زمان سررسی برای خرید</div>
+                        <h2 class="font-weight-bold mb-2">0</h2>
+                        <div>زمان سررسید برای خرید</div>
                     </div>
                     <div>
                         <span class="dashboard-pie-3" style="display: none;">1/5</span><svg class="peity" height="60" width="60"><path d="M 30.000000000000004 0 A 30 30 0 0 1 58.53169548885461 20.72949016875158 L 30 30" data-value="1" fill="rgba(255, 187, 51, 0.3)"></path><path d="M 58.53169548885461 20.72949016875158 A 30 30 0 1 1 29.999999999999993 0 L 30 30" data-value="4" fill="rgb(255, 187, 51)"></path></svg>
@@ -52,8 +52,8 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h2 class="font-weight-bold mb-2">68%</h2>
-                        <div>ئرخواست اتعلام قیمت در 7 روز گدشته</div>
+                        <h2 class="font-weight-bold mb-2">0</h2>
+                        <div>درخواست اتعلام قیمت در 7 روز گدشته</div>
                     </div>
                     <div>
                         <span class="dashboard-pie-4" style="display: none;">2/5</span><svg class="peity" height="60" width="60"><path d="M 30.000000000000004 0 A 30 30 0 0 1 47.633557568774194 54.270509831248425 L 30 30" data-value="2" fill="rgba(51, 181, 229, 0.3)"></path><path d="M 47.633557568774194 54.270509831248425 A 30 30 0 1 1 29.999999999999993 0 L 30 30" data-value="3" fill="rgb(51, 181, 229)"></path></svg>
@@ -68,7 +68,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
-                    <h6 class="card-title">سفارشات اخیر</h6>
+                    <h6 class="card-title">درخواست اخیر</h6>
                     <div>
                         <a href="#" class="mr-3">
                             <i class="fa fa-refresh"></i>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
+                        <div class="" tabindex="1" style="overflow: hidden; outline: none;">
                             <table class="table table-striped mb-0">
                                 <thead>
                                 <tr>
@@ -106,7 +106,7 @@
                             {% for i in items %}
                             <tr>
                             <td>#{{i.id}}</td>
-                            <td>{{i}}</td>
+                            <td>{{i.getItems2|truncatechars:60 }}</td>
                             <td>{{i.user}}</td>
                             
                             <td>{{i.get_dateCreated_jalali}}</td>
@@ -128,19 +128,64 @@
                                 </tbody>
                             </table>
                         </div>
-                        <nav class="mt-3">
+                        {% if items.has_other_pages %}
+                        <nav class="mt-3 d-print-none">
                             <ul class="pagination justify-content-center">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">قبلی</a>
-                                </li>
-                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">بعدی</a>
-                                </li>
+                                <!-- Previous Page Link -->
+                                {% if items.has_previous %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ items.previous_page_number }}" tabindex="-1" aria-disabled="true">قبلی</a>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item disabled">
+                                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">قبلی</a>
+                                    </li>
+                                {% endif %}
+                    
+                                <!-- Page Numbers Logic -->
+                                {% if items.paginator.num_pages > 8 %}
+                                    <!-- Add ellipsis before the range of current pages if needed -->
+                                    {% if items.number > 4 %}
+                                        <li class="page-item disabled"><span class="page-link">...</span></li>
+                                    {% endif %}
+                    
+                                    <!-- Display closest pages to the current page -->
+                                    {% for i in items.paginator.page_range %}
+                                        {% if i >= items.number|add:'-2' and i <= items.number|add:'2' %}
+                                            <li class="page-item {% if items.number == i %} active {% endif %}">
+                                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                    
+                                    <!-- Add ellipsis after the range of current pages if needed -->
+                                    {% if items.number < items.paginator.num_pages|add:'-3' %}
+                                        <li class="page-item disabled"><span class="page-link">...</span></li>
+                                    {% endif %}
+                    
+                                {% else %}
+                                    <!-- Show all pages if there are fewer than 8 pages -->
+                                    {% for i in items.paginator.page_range %}
+                                        <li class="page-item {% if items.number == i %} active {% endif %}">
+                                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                    
+                                <!-- Next Page Link -->
+                                {% if items.has_next %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ items.next_page_number }}">بعدی</a>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item disabled">
+                                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">بعدی</a>
+                                    </li>
+                                {% endif %}
                             </ul>
                         </nav>
+                    {% endif %}
+                    
                     </div>
                 </div>
             </div>
