--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -15,8 +15,8 @@
                 <div class="card-body">
                     <button class="btn btn-outline-dark btn-block btn-block2" id="createreq" data-url="{% url 'create_purchase' %}" >
                         درخواست جدید                   </button>
-                        <button class="btn btn-outline-dark btn-block .btn-block3" data-url="#" >
-                            درون ریزی                 </button>
+                        <button class="btn btn-outline-dark btn-block btn-block3" data-url="#" >
+                            برون ریزی                 </button>
                        
                 </div>
                 <div class="app-sidebar-menu">
@@ -62,7 +62,7 @@
                         {% endif %}
                         <a  class="list-group-item d-flex align-items-center">
                             
-                            <button class="btn btn-outline-dark btn-block .btn-block3" type="submit" data-url="#" >
+                            <button class="btn btn-outline-dark btn-block .btn-block4" type="submit" data-url="#" >
                                 فیلتر                </button>
                            
                            
