--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -16,7 +16,7 @@
                     <button class="btn btn-outline-dark btn-block btn-block2" id="createreq" data-url="{% url 'create_purchase' %}" >
                         درخواست جدید                   </button>
                         <button class="btn btn-outline-dark btn-block btn-block3" data-url="#" >
-                            درون ریزی                 </button>
+                            برون ریزی                 </button>
                        
                 </div>
                 <div class="app-sidebar-menu">
