--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -41,11 +41,17 @@
      <div class="row">
          <div class="col-md-6">
              درخواست دهنده
-             <select class="form-control" name="requested_user" id="requested_user">
+             <select class="form-control select2" name="requested_user" id="requested_user">
                  {% for i in users %}
                      <option value="{{ i.id }}">{{ i }}</option>
                  {% endfor %}
              </select>
+         </div>
+         <div class="col-md-6">
+            تاریخ درخواست
+            <input class=" form-control " type="text" name="created_at" id="created_at" value={{company.created_at}} >
+           
+            
          </div>
      </div>
  {% endif %}
@@ -72,3 +78,13 @@
     </div>
     
 </div>
+<script>
+    $('.select2').select2({
+        placeholder: 'اشخاص'
+    });
+    $('input[name="created_at"]').pDatepicker({
+        format: 'YYYY-MM-DD',
+                autoClose: true,
+                initialValueType: 'gregorian'
+      });
+</script>
