--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -186,8 +186,8 @@
                             <ul class="pagination">
                                 <li class="page-item">
                                 {% if req.has_previous %}
-
-                                    <a class="page-link" href="?page={{ req.previous_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if status %}&status={{ status }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if userlist %}&userlist={{ userlist }}{% endif %}{% if start %}&start={{ start }}{% endif %}{% if end %}&end={{ end }}{% endif %}" aria-label="Previous">
+                                {% comment %} {% if start %}&start={{ start }}{% endif %}{% if end %}&end={{ end }}{% endif %} {% endcomment %}
+                                    <a class="page-link" href="?page={{ req.previous_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if status %}&status={{ status }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if userlist %}&userlist={{ userlist }}{% endif %}" aria-label="Previous">
                                         <i data-feather="chevron-left" class="width-15 height-15"></i>
                                     </a>
                                 {% else %}
@@ -199,7 +199,7 @@
                                 </li>
                                 <li class="page-item">
                                     {% if req.has_next %}
-                                    <a class="page-link" href="?page={{ req.next_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if status %}&status={{ status }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if userlist %}&userlist={{ userlist }}{% endif %}{% if start %}&start={{ start }}{% endif %}{% if end %}&end={{ end }}{% endif %}" aria-label="Next">
+                                    <a class="page-link" href="?page={{ req.next_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if status %}&status={{ status }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if userlist %}&userlist={{ userlist }}{% endif %}" aria-label="Next">
                                         <i data-feather="chevron-right" class="width-15 height-15"></i>
                                     </a>
                                     {% else %}
