--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
@@ -7,6 +7,8 @@
         <div class="card">
             <div class="card-body">
                 <h6 class="card-title">{{title}}</h6>
+                <input type="hidden" id="companyId" name="companyId" value="{{company.id}}" />
+
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
                     <table class="table  table-bordered">
                         <thead>
