--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
@@ -44,11 +44,19 @@
                                     <div class="text-truncate small">{{i.user}}</div>
                                     <div class="text-nowrap pl-3">
                                         <ul class="list-inline">
+                                            {% if i.is_emergency %}
+                                            <li class="list-inline-item mb-0">
+                                                <div class="spinner-grow text-dark" role="status" data-original-title="اضطراری">
+                                                    <span class="sr-only">در حال بارگذاری</span>
+                                                </div>
+                                            </li>
+                                            {% endif %}
                                             <li class="list-inline-item mb-0">
                                                 <a href="#" data-toggle="tooltip" title="" data-original-title="وضعیت">
                                                   {{i.get_status_display}}
                                                 </a>
                                             </li>
+                                           
                                             {% if i.has_attachment %}
                                             <li class="list-inline-item mb-0">
                                                 <a href="#" data-toggle="tooltip" title="" data-original-title="Attachment">
@@ -59,6 +67,7 @@
                                             <li class="list-inline-item mb-0">
                                                 <i class="fa fa-circle text-{{i.get_purchase_status_color}}"></i>
                                             </li>
+                                           
                                         </ul>
                                     </div>
                                 </div>
